--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-afterburner</artifactId>
         </dependency>
@@ -57,6 +61,10 @@
         <dependency>
             <groupId>com.inmaytide.orbit</groupId>
             <artifactId>commons</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.inmaytide.orbit</groupId>
+            <artifactId>commons-service</artifactId>
         </dependency>
         <dependency>
             <groupId>com.inmaytide</groupId>
