--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,9 @@
     <parent>
         <groupId>com.inmaytide.orbit</groupId>
         <artifactId>parent</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>3.0.1-SNAPSHOT</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.inmaytide.orbit</groupId>
     <artifactId>authorization</artifactId>
     <version>1.0.0</version>
     <name>authorization</name>
@@ -18,6 +17,12 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.alibaba.nacos</groupId>
+                    <artifactId>logback-adapter</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
